<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_repo_directory_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".android.ui.MainActivity">

    <TextView
        android:id="@+id/fragment_repo_git_local_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_padding"
        android:gravity="center"
        android:text="@string/fragment_repo_git_storage_directory_desc"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="14sp" />

    <!-- Browse button. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_repo_directory_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/browse"
            android:src="?attr/oic_browse_directory" />

        <Button
            android:id="@+id/fragment_repo_git_directory_browse_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/fragment_padding"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:layout_marginRight="@dimen/fragment_padding"
            android:layout_marginStart="@dimen/fragment_padding"
            android:text="@string/browse" />

    </LinearLayout>


    <!-- Input remote uri. -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_repo_git_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_padding"
        android:layout_marginRight="@dimen/fragment_padding"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_repo_git_remote_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_repo_git_gituri_desc"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <!-- Choose authentication type -->
    <LinearLayout
        android:id="@+id/spinner_auth_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_padding">

        <TextView
            android:id="@+id/fragment_git_transport_auth_selection_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git_auth_method" />

        <Spinner
            android:id="@+id/fragment_repo_git_transport_auth_selection_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/git_auth_public_key_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_repo_git_generate_keys"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:layout_marginStart="@dimen/fragment_padding"
            android:layout_weight="1"
            android:text="@string/generate_keys" />

        <Button
            android:id="@+id/fragment_repo_git_copy_pubkey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/fragment_padding"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:layout_marginRight="@dimen/fragment_padding"
            android:layout_marginStart="@dimen/fragment_padding"
            android:layout_weight="1"
            android:text="@string/copy_pubkey_to_clipboard" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_repo_git_password_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_padding"
        android:layout_marginRight="@dimen/fragment_padding"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_repo_git_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textVisiblePassword"
            android:padding="@dimen/fragment_padding" />
    </android.support.design.widget.TextInputLayout>

    <!-- Test repository button. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_repo_git_test_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_padding"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:layout_marginRight="@dimen/fragment_padding"
            android:layout_marginStart="@dimen/fragment_padding"
            android:text="Test Repo Connection" />
    </LinearLayout>

</LinearLayout>


