<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
        If your app is using the Support Library for compatibility on versions as low as
        Android 2.1, the showAsAction attribute is not available from the android: namespace.
        Instead this attribute is provided by the Support Library and you must define your own XML
        namespace and use that namespace as the attribute prefix. (A custom XML namespace should be
        based on your app name, but it can be any name you want and is only accessible within the
        scope of the file in which you declare it.)
        ( https://developer.android.com/training/basics/actionbar/adding-buttons.html )
    -->

    <item
        android:id="@+id/repos_options_menu_item_new"
        android:icon="?attr/oic_new_item"
        app:showAsAction="always"
        android:title="@string/repos_options_menu_new_repo">

        <menu>
            <item
                android:id="@+id/repos_options_menu_item_new_dropbox"
                app:showAsAction="ifRoom"
                android:title="@string/dropbox"/>
            <item
                android:id="@+id/repos_options_menu_item_new_external_storage_directory"
                app:showAsAction="ifRoom"
                android:title="@string/directory"/>
            <item
                android:id="@+id/repos_options_menu_item_new_git"
                app:showAsAction="ifRoom"
                android:title="@string/git_repository"/>
        </menu>
    </item>
</menu>
